fix: spacing when no data (#2202)
* fix: spacing when no data

* fix: account issue with spacing

--- a/src/pages/Account/ActivePermissions/ActivePermissionsHealth/APHealthTable/styles.module.scss
+++ b/src/pages/Account/ActivePermissions/ActivePermissionsHealth/APHealthTable/styles.module.scss
@@ -5,3 +5,11 @@
         overflow: scroll;
     }
 }
+
+.noDataWrapper {
+    min-height: auto;
+
+    @media (max-width: 768px) {
+        overflow: scroll;
+    }
+}
