--- a/src/pages/Account/ActivePermissions/ActivePermissionsLife/APLifeTable/styles.module.scss
+++ b/src/pages/Account/ActivePermissions/ActivePermissionsLife/APLifeTable/styles.module.scss
@@ -1,9 +1,15 @@
-
 .tableWrapper {
-  margin-bottom: 40px;
   min-height: calc(100vh - 300px);
 
   @media (max-width: 768px) {
-      overflow: scroll;
+    overflow: scroll;
+  }
+}
+
+.noDataWrapper {
+  min-height: auto;
+
+  @media (max-width: 768px) {
+    overflow: scroll;
   }
 }
